# CaRL-framework

./: .gitignore  README.md  manage.py  pyproject.toml
carl/: expander.rkt  grounding.rkt  main.rkt  test.carl
carl_framework/: asgi.py  settings.py  urls.py  wsgi.py
interpreter/: views.py
loader/: models.py  views.py
loader/migrations/: 0001_initial.py
modeller/: apps.py  views.py
static/: universal.css
templates/interpreter/: index.html
templates/modeller/: index.html
