[tool.poetry]
name = "carl-framework"
version = "0.1.0"
description = "Framework for Causal Inference in Heterogenous Domains"
authors = ["Moe Kayali <kayali@cs.washington.edu>"]

[tool.poetry.dependencies]
python = "^3.6"
Django = "^3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
