[tool.poetry]
name = "carl-framework"
version = "0.1.0"
description = "Framework for Causal Inference in Heterogenous Domains"
authors = ["Moe Kayali <kayali@cs.washington.edu>"]

[tool.poetry.dependencies]
python = "^3.6"
Django = "^3.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
